fixed a little bit of header alignment in iphone mode

--- a/chase/public/css/carousel.css
+++ b/chase/public/css/carousel.css
@@ -2,13 +2,16 @@
   display: flex;
   line-height: 0%;
 }
+.carousel__heading--container {
+  text-align: center;
+}
 .carousel__container {
   position: relative;
   display: flex;
 }
 .carousel__heading {
   font-size: 40px;
-  margin-left: 35%;
+  /* margin-left: 35%; */
   color: #414042;
   font-weight: 300;
 }
@@ -105,7 +108,7 @@
     text-align: center;
   } */
   .carousel__heading {
-    margin-left: -3%;
+    /* margin-left: -3%; */
     text-align: center;
     font-weight: 300;
     color: #414042;
@@ -123,6 +126,7 @@
 
 /* iphone-x media queries  */
 @media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-device-pixel-ratio: 3) {
+  /* @media only screen and (max-width: 768px) { */
   /* .carousel__heading--container {
     height: 180px;
     width: 660px;
@@ -130,14 +134,16 @@
     text-align: center;
   } */
   .carousel__heading {
-    margin-left: 2%;
-    width: 190%;
+    margin-left: 20%;
+    width: 160%;
     height: 1.3em;
     font-size: 55px;
     font-weight: 300;
     color: #414042;
     line-height: 95%;
+    text-align: center;
   }
+
   .carousel__container {
     height: 148px;
     width: 190%;
@@ -156,8 +162,16 @@
     margin-left: 7%;
     display: flex;
     position: relative;
-    width: 90%;
+    width: 85%;
     overflow: hidden;
+  }
+  .carousel__inner {
+    /* background-color: blue; */
+    top: 30%;
+    display: flex;
+    position: absolute;
+    transition: transform 300ms cubic-bezier(0.455, 0.03, 0.515, 0.955),
+      visibility 0s, opacity 0.5s linear;
   }
   .carousel_item {
     height: 70px;
